# matrix-inference-test

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  download-eigen.sh
docs/: benchmark-results.md
docs/results/: single-thread-data-amd-ryzen-9-7950x-16-core.csv  single-thread-data-intel-xeon-e-e-2488.csv  single-thread-meta-amd-ryzen-9-7950x-16-core.json  single-thread-meta-intel-xeon-e-e-2488.json  thread-scaling-data-amd-ryzen-9-7950x-16-core.csv  thread-scaling-data-intel-xeon-e-e-2488.csv  thread-scaling-meta-amd-ryzen-9-7950x-16-core.json  thread-scaling-meta-intel-xeon-e-e-2488.json
eigen-f32-multi-thread/: CMakeLists.txt  Makefile  cpu_topology.cpp  cpu_topology.h  generate-report.sh  main.cpp  run-benchmark-suite.sh  tsc_timer.cpp  tsc_timer.h
eigen-f32-single-thread/: CMakeLists.txt  Makefile  generate-report.sh  main.cpp  run-benchmark-suite.sh
scripts/: platform-info.sh  render-published-results.py  render-published-results.sh
